# weBallin

./: .gitignore  Byggninger.kra  CMakeLists.txt  KimPresentasjon.txt  NotaterLover.md  README-alt.md  README.md  README.old.md  TODO.md  container-test.bat  docker-compose.yaml  environment.env  mongo-init.js
docs/: Lover_og_Regler.md  Nettverksdiagram.drawio  Prosjektrapport.docx  Risiko.md  Risikodiagram.xlsx  ~$osjektrapport.docx  ~WRL0753.tmp
docs/markdown/: Index.md  Lover_og_Regler.md  Risiko.md
game/art/: BuildingPerspective.paintingassistant
include/: Gudsheader.h  Maxxin.h
lib/: glfw3.lib
src/: CMakeLists.txt  main.cpp
src/window/: window.cpp
website/: Cargo.toml  HjerteInfarkt.txt
website/Container/: Dockerfile  Dockerfile.backend  Dockerfile.database  Dockerfile.frontend  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml
website/backend/: Cargo.toml
website/backend/src/: main.rs
website/backend/src/api/: highscore_api.rs  mod.rs  user_api.rs
website/backend/src/models/: highscore_model.rs  mod.rs  user_model.rs
website/backend/src/repository/: mongodb_repo.rs
website/backend/src/repostitories/: mod.rs  mongodb_repo.rs  mongodb_repos.rs
website/frontend/: index.html
website/frontend/src/: App.tsx  login.html  signup.html  style.css  user.html
website/frontend/src/components/: Button.tsx
website/src/: main.rs
